Added style for equal margins in model form

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -201,6 +201,10 @@ table.editable-table {
   color: $brand-primary;
 }
 
+model-form p {
+  margin-bottom:  21px;
+}
+
 .multi-input {
   border: 1px solid #ccc;
   height: auto !important;
