--- a/src/components/model/searchCodeSchemeModal.html
+++ b/src/components/model/searchCodeSchemeModal.html
@@ -55,27 +55,7 @@
 
         <div class="col-md-4 search-selection">
           <div ng-if="!ctrl.isSelectionFormData() && ctrl.selection">
-            <non-editable title="Identifier" value="ctrl.selection.scheme.identifier" context="ctrl.model"></non-editable>
-            <non-editable title="Code scheme name" value="ctrl.selection.scheme.title" context="ctrl.model"></non-editable>
-            <non-editable title="Description" value="ctrl.selection.scheme.description" context="ctrl.model"></non-editable>
-            <non-editable title="Creator" value="ctrl.selection.scheme.creator" context="ctrl.model"></non-editable>
-
-            <br />
-
-            <table class="table table-hover">
-              <thead>
-              <tr>
-                <th translate>Identifier</th>
-                <th translate>Title</th>
-              </tr>
-              </thead>
-              <tbody>
-              <tr ng-repeat="value in ctrl.selection.values | orderBy: 'identifier'">
-                <td>{{value.identifier}}</td>
-                <td>{{value.title | translateValue: ctrl.model}}</td>
-              </tr>
-              </tbody>
-            </table>
+            <code-scheme-view model="ctrl.model" code-scheme="ctrl.selection"></code-scheme-view>
           </div>
 
           <div ng-if="ctrl.isSelectionFormData()">
