More generic click handler added in addition of href handler

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -79,6 +79,10 @@ uri-input-autocomplete {
 
 table.editable-table {
 
+  a:hover {
+    cursor: pointer;
+  }
+
   tr {
     &.collapsed {
       visibility: collapse;
