--- a/src/components/model/codeSchemeView.html
+++ b/src/components/model/codeSchemeView.html
@@ -1,9 +1,9 @@
 <h4 translate>Code scheme information</h4>
 
-<non-editable title="Identifier" value="ctrl.codeScheme.identifier" context="ctrl.model"></non-editable>
-<non-editable title="Code scheme name" value="ctrl.codeScheme.title" context="ctrl.model"></non-editable>
-<non-editable title="Description" value="ctrl.codeScheme.description" context="ctrl.model"></non-editable>
-<non-editable title="Creator" value="ctrl.codeScheme.creator" context="ctrl.model"></non-editable>
+<non-editable title="Identifier" value="ctrl.codeScheme.identifier" context="ctrl.context"></non-editable>
+<non-editable title="Code scheme name" value="ctrl.codeScheme.title" context="ctrl.context"></non-editable>
+<non-editable title="Description" value="ctrl.codeScheme.description" context="ctrl.context"></non-editable>
+<non-editable title="Creator" value="ctrl.codeScheme.creator" context="ctrl.context"></non-editable>
 
 <br />
 
@@ -17,7 +17,7 @@
   <tbody>
   <tr ng-repeat="value in ctrl.values | orderBy: 'identifier'">
     <td>{{value.identifier}}</td>
-    <td>{{value.title | translateValue: ctrl.model}}</td>
+    <td>{{value.title | translateValue: ctrl.context}}</td>
   </tr>
   </tbody>
 </table>
