--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -44,6 +44,16 @@ $selectionListWidth: 275px;
 $versionListWidth: 400px;
 $footer-height: 50px;
 
+code-scheme-view.popup {
+
+  h4 { display: none; }
+
+  max-height: calc(100vh - 250px);
+  width: 100%;
+  overflow-y: auto;
+  display: inline-block;
+}
+
 .search-filters {
 
   margin-right: 0;
