Reuse codeSchemeView in editable select and make it work with external

--- a/src/components/editor/editableCodeSchemeSelect.html
+++ b/src/components/editor/editableCodeSchemeSelect.html
@@ -5,10 +5,8 @@
       <editable-label data-title="'Code scheme'"></editable-label>
       <div ng-hide="ctrl.codeScheme" translate>Not defined</div>
     </div>
-    <div class="model-view__sub">
-      <non-editable title="Identifier" value="ctrl.codeScheme.identifier" context="ctrl.model"></non-editable>
-      <non-editable title="Code scheme name" value="ctrl.codeScheme.title" context="ctrl.model"></non-editable>
-      <non-editable title="Description" value="ctrl.codeScheme.description" context="ctrl.model"></non-editable>
+    <div ng-if="ctrl.codeScheme" class="model-view__sub">
+      <code-scheme-view code-scheme="ctrl.codeScheme" context="ctrl.model" show-values="false"></code-scheme-view>
     </div>
   </div>
 
@@ -16,5 +14,4 @@
     <button ng-if="ctrl.isEditing()" type="button" class="btn btn-default btn-sm" ng-click="ctrl.selectCodeScheme()" translate>Choose code scheme</button>
     <button ng-show="ctrl.isEditing() && ctrl.codeScheme" type="button" class="btn btn-default btn-sm" ng-click="ctrl.removeCodeScheme()" translate>Clear selection</button>
   </div>
-</div>
 </div>
