--- a/src/components/model/codeSchemeView.html
+++ b/src/components/model/codeSchemeView.html
@@ -1,23 +1,28 @@
-<h4 translate>Code scheme information</h4>
+<h4 ng-if="ctrl.title">{{ctrl.title | translate}}</h4>
 
-<non-editable title="Identifier" value="ctrl.codeScheme.identifier" context="ctrl.context"></non-editable>
+<non-editable title="Code scheme URI" value="ctrl.codeScheme.id" context="ctrl.context"></non-editable>
 <non-editable title="Code scheme name" value="ctrl.codeScheme.title" context="ctrl.context"></non-editable>
 <non-editable title="Description" value="ctrl.codeScheme.description" context="ctrl.context"></non-editable>
 <non-editable title="Creator" value="ctrl.codeScheme.creator" context="ctrl.context"></non-editable>
 
 <br />
 
-<table class="table table-hover">
-  <thead>
-  <tr>
-    <th translate>Identifier</th>
-    <th translate>Title</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr ng-repeat="value in ctrl.values | orderBy: 'identifier'">
-    <td>{{value.identifier}}</td>
-    <td>{{value.title | translateValue: ctrl.context}}</td>
-  </tr>
-  </tbody>
-</table>
+<a ng-if="!ctrl.showValues || ctrl.codeScheme.isExternal()" ng-click="ctrl.browse()" translate>Browse code values</a>
+
+<div ng-if="ctrl.showValues && !ctrl.codeScheme.isExternal()">
+
+  <table class="table table-hover">
+    <thead>
+    <tr>
+      <th translate>Identifier</th>
+      <th translate>Title</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr ng-repeat="value in ctrl.values | orderBy: 'identifier'">
+      <td>{{value.identifier}}</td>
+      <td>{{value.title | translateValue: ctrl.context}}</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
