--- a/src/components/common/export.html
+++ b/src/components/common/export.html
@@ -1,5 +1,5 @@
 <div class="btn-group right" uib-dropdown is-open="exportOpen" ng-hide="ctrl.isEditing()">
-  <button class="btn btn-default" uib-dropdown-toggle>{{'Export' | translate}} <span class="caret"></span></button>
+  <button class="btn btn-default" uib-dropdown-toggle uib-tooltip="{{'Export' | translate}}"><i class="fa fa-download"></i>&nbsp;<span class="caret"></span></button>
   <ul class="dropdown-menu" role="menu">
     <li role="menuitem" class="dropdown-header" translate>Show</li>
     <li role="menuitem" ng-repeat="download in ctrl.downloads track by download.name"><a target="_blank" ng-href="{{download.hrefRaw}}">{{download.name | translate}}</a></li>
