--- a/src/components/form/editableEntityButtons.html
+++ b/src/components/form/editableEntityButtons.html
@@ -2,9 +2,9 @@
   <model-language-chooser context="context"></model-language-chooser>
   <button type="button" class="btn btn-default right" ng-click="ctrl.cancelEditing()" ng-show="ctrl.isEditing()" translate>Cancel edit</button>
   <button type="button" class="btn btn-default right" ng-click="ctrl.saveEdited()" ng-show="ctrl.isEditing()" ng-disabled="form.$invalid || form.$pending" translate>Save changes</button>
-  <button type="button" class="btn btn-default right" ng-click="ctrl.edit()" ng-show="ctrl.canEdit()" translate>Edit</button>
+  <button type="button" class="btn btn-default right" ng-click="ctrl.edit()" ng-show="ctrl.canEdit()" uib-tooltip="{{'Edit' | translate}}"><i class="fa fa-pencil"></i></button>
   <a class="btn btn-default right" ng-show="ctrl.canAskForRights()" ng-href="{{ctrl.getGroup().homepage}}" target="_blank" translate>Ask for group rights</a>
-  <button type="button" class="btn btn-default right" ng-click="ctrl.removeEdited()" ng-show="ctrl.canRemove()">{{ctrl.getRemoveText() | translate}}</button>
+  <button type="button" class="btn btn-default right" ng-click="ctrl.removeEdited()" ng-show="ctrl.canRemove()" uib-tooltip="{{ctrl.getRemoveText() | translate}}"><i class="fa fa-trash"></i></button>
 
   <ng-transclude></ng-transclude>
   <submit-error-panel error="ctrl.submitError"></submit-error-panel>
