Change some glyphicons into fa-icons

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -758,7 +758,7 @@ ajax-loading-indicator-small {
   }
 }
 
-.glyphicon-user, .glyphicon-retweet {
+.fa-user, .fa-users {
   margin-right: 15px;
 }
 
