--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -3,7 +3,7 @@
           type="button"
           class="btn btn-default pull-right"
           ng-disabled="!ctrl.inUnstableState"
-          ng-click="editableController.removeProperty(ctrl.property)" translate>Delete property</button>
+          ng-click="editableController.removeProperty(ctrl.property)" uib-tooltip="{{'Delete property' | translate}}"><i class="fa fa-trash"></i></button>
 
   <editable data-title="Class property label" context="ctrl.model">
     <input id="{{ctrl.property.internalId + 'label'}}" class="form-control" type="text" restrict-duplicates="ctrl.otherPropertyLabels" localized-input="label" context="ctrl.model" ng-model="ctrl.property.label" />
