Change some glyphicons into fa-icons

--- a/src/components/common/modalTemplate.html
+++ b/src/components/common/modalTemplate.html
@@ -1,6 +1,6 @@
 <div class="modal-header modal-header-confirm">
   <h4 class="modal-title ng-binding">
-    <a type="button" title="Close" data-dismiss="modal"><i ng-click="$dismiss('cancel')" class="glyphicon glyphicon-remove icon-arrow-right pull-right"></i></a>
+    <a type="button" title="Close" data-dismiss="modal"><i ng-click="$dismiss('cancel')" class="fa fa-times icon-arrow-right pull-right"></i></a>
     <div ng-transclude="title"></div>
   </h4>
 </div>
