--- a/src/components/editor/searchClassModal.html
+++ b/src/components/editor/searchClassModal.html
@@ -71,7 +71,7 @@
 
     <modal-buttons>
       <div class="alert alert-danger" style="display: inline; margin-right: 10px;" role="alert" ng-show="ctrl.cannotConfirm">
-        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+        <span class="fa fa-exclamation-circle" aria-hidden="true"></span>
         <span>{{ctrl.cannotConfirm | translate}}</span>
       </div>
       <button type="button" class="btn btn-default" ng-click="ctrl.close()" translate>Cancel</button>
