--- a/src/components/form/submitErrorPanel.html
+++ b/src/components/form/submitErrorPanel.html
@@ -1,4 +1,4 @@
 <div class="alert alert-danger" role="alert" ng-if="error">
-  <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+  <span class="fa fa-exclamation-circle" aria-hidden="true"></span>
   <span>{{error | translate}}</span>
 </div>
