--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -827,10 +827,10 @@ ajax-loading-indicator-small {
     width: auto;
     min-width: 30%;
     display: table;
+  }
 
-    .editable-wrap .content {
-      padding-right: 0;
-    }
+  .editable-wrap .content {
+    padding-right: 20px;
   }
 }
 
