History modal to adapting size

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -828,6 +828,11 @@ ajax-loading-indicator-small {
     min-width: 30%;
     display: table;
   }
+  &.modal-adapting-medium {
+    width: auto;
+    min-width: 60%;
+    display: table;
+  }
 
   .editable-wrap .content {
     padding-right: 20px;
