--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -1,68 +1,94 @@
 
-<h4>{{ctrl.class.normalizedType + ' information' | capitalize | translate}}</h4>
+<div class="row">
+<div class="col-md-6">
+  <h4>{{ctrl.class.normalizedType + ' information' | capitalize | translate}}</h4>
 
-<editable data-title="{{ctrl.class.normalizedType + ' label' | capitalize}}" context="ctrl.model" autofocus>
-  <input id="classLabel" class="form-control" type="text" localized-input="label" context="ctrl.model" ng-model="ctrl.class.label"/>
-</editable>
+  <editable data-title="{{ctrl.class.normalizedType + ' label' | capitalize}}" context="ctrl.model" autofocus>
+    <input id="classLabel" class="form-control" type="text" localized-input="label" context="ctrl.model" ng-model="ctrl.class.label"/>
+  </editable>
 
-<editable data-title="{{ctrl.class.normalizedType + ' id' | capitalize}}" context="ctrl.model">
-  <input id="classId" class="form-control" type="text" required id-input="class" old="ctrl.oldClass" ng-model="ctrl.class.id" ng-disabled="!ctrl.inUnstableState" />
-</editable>
+  <editable data-title="{{ctrl.class.normalizedType + ' id' | capitalize}}" context="ctrl.model">
+    <input id="classId" class="form-control" type="text" required id-input="class" old="ctrl.oldClass" ng-model="ctrl.class.id" ng-disabled="!ctrl.inUnstableState" />
+  </editable>
 
-<editable data-title="Description" context="ctrl.model">
-  <textarea id="classComment" class="form-control" localized-input context="ctrl.model" ng-model="ctrl.class.comment"></textarea>
-</editable>
+  <editable ng-if="ctrl.class.isOfType('class')" data-title="Superclass" link="ctrl.linkToSuperclass()" context="ctrl.model">
+    <uri-select id="superClass" type="class" uri="ctrl.class.subClassOf" model="ctrl.model" after-selected="ctrl.addPropertiesFromClass(id, 'super')"></uri-select>
+  </editable>
 
-<editable ng-if="ctrl.class.isOfType('class')" data-title="Superclass" link="ctrl.linkToSuperclass()" context="ctrl.model">
-  <uri-select id="superClass" type="class" uri="ctrl.class.subClassOf" model="ctrl.model" after-selected="ctrl.addPropertiesFromClass(id, 'super')"></uri-select>
-</editable>
+  <editable ng-if="ctrl.class.isOfType('shape')" data-title="Specialized from class" link="ctrl.linkToScopeclass()" context="ctrl.model">
+    <uri-select id="scopeClass" type="class" uri="ctrl.class.scopeClass" model="ctrl.model" mandatory="true" after-selected="ctrl.addPropertiesFromClass(id, 'scope')"></uri-select>
+  </editable>
 
-<editable ng-if="ctrl.class.isOfType('shape')" data-title="Specialized from class" link="ctrl.linkToScopeclass()" context="ctrl.model">
-  <uri-select id="scopeClass" type="class" uri="ctrl.class.scopeClass" model="ctrl.model" mandatory="true" after-selected="ctrl.addPropertiesFromClass(id, 'scope')"></uri-select>
-</editable>
+  <editable-multiple-uri-select id="equivalentClass" type="class" ng-model="ctrl.class.equivalentClasses" model="ctrl.model" data-title="{{'Equivalent class'}}"></editable-multiple-uri-select>
 
-<editable-multiple-uri-select id="equivalentClass" type="class" ng-model="ctrl.class.equivalentClasses" model="ctrl.model" data-title="{{'Equivalent class'}}"></editable-multiple-uri-select>
+  <defined-by entity="ctrl.class" model="ctrl.model"></defined-by>
 
-<defined-by entity="ctrl.class" model="ctrl.model"></defined-by>
-
-<editable data-title="State" value-as-localization-key="true" ng-if="!ctrl.class.unsaved" context="ctrl.model">
-  <state-select id="classState" state="ctrl.class.state" model="ctrl.model"></state-select>
-</editable>
-
-<editable-subject-select references="ctrl.model.references" type="class" subject="ctrl.class.subject" model="ctrl.model" disable="!ctrl.inUnstableState"></editable-subject-select>
-
-<editable data-title="Editorial note" context="ctrl.model">
-  <textarea id="editorialNote" class="form-control" localized-input="free" context="ctrl.model" ng-model="ctrl.class.editorialNote"></textarea>
-</editable>
-
-<div ng-show="ctrl.class.properties.length > 0">
-  <h4>{{ctrl.class.normalizedType + ' properties' | capitalize | translate}}</h4>
-
-  <uib-accordion close-others="true">
-    <uib-accordion-group ng-repeat="property in ctrl.class.properties track by property.internalId.value" is-open="ctrl.propertyViews[property.internalId.uri].isOpen">
-      <uib-accordion-heading>
-        <span ng-class="property.glyphIconClass"></span>
-        <span>{{property | translateLabel: ctrl.model}}</span>
-        <accordion-chevron is-open="ctrl.propertyViews[property.internalId.uri].isOpen"></accordion-chevron>
-        <div class="property-ordering" ng-show="ctrl.isEditing()">
-        <span ng-show="!$first"
-              class="glyphicon glyphicon-chevron-up"
-              ng-click="ctrl.movePropertyUp($event, property)"></span>
-          <br />
-        <span ng-show="!$last"
-              class="glyphicon glyphicon-chevron-down"
-              ng-click="ctrl.movePropertyDown($event, property)"></span>
-        </div>
-      </uib-accordion-heading>
-      <property-view property="property" class="ctrl.class" model="ctrl.model"></property-view>
-    </uib-accordion-group>
-  </uib-accordion>
 </div>
 
-<h4 translate>Additional information</h4>
+<div class="col-md-6">
+  <editable data-title="Description" context="ctrl.model">
+    <textarea id="classComment" class="form-control" localized-input context="ctrl.model" ng-model="ctrl.class.comment"></textarea>
+  </editable>
 
-<div ng-show="ctrl.model.isOfType('profile') && (ctrl.class.constraint.isVisible() || ctrl.isEditing())">
-  <editable-constraint constraint="ctrl.class.constraint" model="ctrl.model" class="ctrl.class"></editable-constraint>
+  <editable data-title="State" value-as-localization-key="true" ng-if="!ctrl.class.unsaved" context="ctrl.model">
+    <state-select id="classState" state="ctrl.class.state" model="ctrl.model"></state-select>
+  </editable>
+
+  <editable data-title="Editorial note" context="ctrl.model">
+    <textarea id="editorialNote" class="form-control" localized-input="free" context="ctrl.model" ng-model="ctrl.class.editorialNote"></textarea>
+  </editable>
+
 </div>
 
-<usage-panel entity="ctrl.class" context="ctrl.model"></usage-panel>
+</div>
+
+<div class="row">
+
+  <div class="col-md-12">
+    <editable-subject-select references="ctrl.model.references" type="class" subject="ctrl.class.subject" model="ctrl.model" disable="!ctrl.inUnstableState"></editable-subject-select>
+  </div>
+</div>
+
+<div class="row">
+
+<div class="col-md-12">
+  <div ng-show="ctrl.class.properties.length > 0">
+    <h4>{{ctrl.class.normalizedType + ' properties' | capitalize | translate}}</h4>
+
+    <uib-accordion close-others="true">
+      <uib-accordion-group ng-repeat="property in ctrl.class.properties track by property.internalId.value" is-open="ctrl.propertyViews[property.internalId.uri].isOpen">
+        <uib-accordion-heading>
+          <span class="accordion-icon" ng-class="property.glyphIconClass"></span>
+          <span>{{property | translateLabel: ctrl.model}}</span>
+          <accordion-chevron is-open="ctrl.propertyViews[property.internalId.uri].isOpen"></accordion-chevron>
+          <div class="property-ordering" ng-show="ctrl.isEditing()">
+          <span ng-show="!$first"
+                class="glyphicon glyphicon-chevron-up"
+                ng-click="ctrl.movePropertyUp($event, property)"></span>
+            <br />
+          <span ng-show="!$last"
+                class="glyphicon glyphicon-chevron-down"
+                ng-click="ctrl.movePropertyDown($event, property)"></span>
+          </div>
+        </uib-accordion-heading>
+        <property-view property="property" class="ctrl.class" model="ctrl.model"></property-view>
+      </uib-accordion-group>
+    </uib-accordion>
+  </div>
+</div>
+
+</div>
+
+<div class="row">
+
+<div class="col-md-12">
+  <h4 translate>Additional information</h4>
+
+  <div ng-show="ctrl.model.isOfType('profile') && (ctrl.class.constraint.isVisible() || ctrl.isEditing())">
+    <editable-constraint constraint="ctrl.class.constraint" model="ctrl.model" class="ctrl.class"></editable-constraint>
+  </div>
+
+  <usage-panel entity="ctrl.class" context="ctrl.model"></usage-panel>
+</div>
+
+</div>
