--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -368,7 +368,7 @@ ul.errors {
   overflow-y: auto;
   padding: 0 20px 20px 20px;
 
-  .col-md-1, .col-md-5, .col-md-7, .col-md-11, .col-md-12 {
+  >.col-md-1, >.col-md-5, >.col-md-7, >.col-md-11, >.col-md-12 {
     padding: 0 0 0 10px;
   }
 }
@@ -461,7 +461,7 @@ ul.errors {
   min-height: 100vh;
   padding: 10px 0;
 
-  .col-md-1, .col-md-5, .col-md-7, .col-md-11, .col-md-12 {
+  >.col-md-1, >.col-md-5, >.col-md-7, >.col-md-11, >.col-md-12 {
     padding: 0 0 0 10px;
   }
 }
