--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -55,7 +55,23 @@
 
       <editable-multiple-uri-select ng-if="ctrl.isAssociation()" id="classIn" type="class" ng-model="ctrl.property.classIn" model="ctrl.model" data-title="{{'Class type'}}"></editable-multiple-uri-select>
 
+    </div>
+
+    <div class="col-md-6">
+      <editable data-title="Editorial note" context="ctrl.model">
+        <textarea id="editorialNote" class="form-control" localized-input="free" context="ctrl.model" ng-model="ctrl.property.editorialNote"></textarea>
+      </editable>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
       <editable-code-scheme-select model="ctrl.model" code-scheme="ctrl.property.codeScheme"></editable-code-scheme-select>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6">
 
       <editable data-title="Example" context="ctrl.model">
         <code-value-input-autocomplete code-scheme="ctrl.property.codeScheme" context="ctrl.model">
@@ -76,36 +92,33 @@
           <input id="{{ctrl.property.internalId + 'hasValue'}}" class="form-control" type="text" datatype-input="ctrl.property.inputType" code-scheme="ctrl.property.codeScheme" ng-model="ctrl.property.hasValue" />
         </code-value-input-autocomplete>
       </editable>
+    </div>
+
+    <div class="col-md-6">
 
       <editable ng-if="ctrl.isAttribute()" data-title="Pattern" context="ctrl.model">
         <input id="{{ctrl.property.internalId + 'pattern'}}" class="form-control" type="text" ng-model="ctrl.property.pattern" />
       </editable>
 
-      <div class="clearfix">
-        <editable data-title="Min length" class="range-input" context="ctrl.model">
+      <div class="range-input">
+        <editable data-title="Min length" context="ctrl.model">
           <input id="{{ctrl.property.internalId + 'minLength'}}" min-input max="ctrl.property.maxLength" class="form-control" type="number" ng-model="ctrl.property.minLength" />
         </editable>
 
-        <editable data-title="Max length" class="range-input" context="ctrl.model">
+        <editable data-title="Max length" context="ctrl.model">
           <input id="{{ctrl.property.internalId + 'maxLength'}}" max-input min="ctrl.property.minLength" class="form-control" type="number" ng-model="ctrl.property.maxLength" />
         </editable>
       </div>
 
-      <div class="clearfix">
-        <editable data-title="Min count" class="range-input" context="ctrl.model">
+      <div class="range-input">
+        <editable data-title="Min count" context="ctrl.model">
           <input id="{{ctrl.property.internalId + 'minCount'}}" placeholder="0" min-input max="ctrl.property.maxCount" class="form-control" type="number" ng-model="ctrl.property.minCount" />
         </editable>
 
-        <editable data-title="Max count" class="range-input" context="ctrl.model">
+        <editable data-title="Max count" context="ctrl.model">
           <input id="{{ctrl.property.internalId + 'maxCount'}}" placeholder="*" max-input min="ctrl.property.minCount" class="form-control" type="number" ng-model="ctrl.property.maxCount" />
         </editable>
       </div>
-    </div>
-    <div class="col-md-6">
-
-      <editable data-title="Editorial note" context="ctrl.model">
-        <textarea id="editorialNote" class="form-control" localized-input="free" context="ctrl.model" ng-model="ctrl.property.editorialNote"></textarea>
-      </editable>
     </div>
   </div>
 
