Editable wrap added to fix label styles

--- a/src/components/editor/editableCodeSchemeSelect.html
+++ b/src/components/editor/editableCodeSchemeSelect.html
@@ -1,4 +1,4 @@
-<div ng-if="ctrl.codeScheme || ctrl.isEditing()">
+<div ng-if="ctrl.codeScheme || ctrl.isEditing()" class="editable-wrap">
   <div>
     <editable-label data-title="'Code scheme'"></editable-label>
     <div ng-hide="ctrl.codeScheme" translate>Not defined</div>
