--- a/src/components/editor/classView.html
+++ b/src/components/editor/classView.html
@@ -12,7 +12,7 @@
         </selection-buttons>
 
         <selection-content>
-          <class-form class="ctrl.editableInEdit" old-class="ctrl.class" model="ctrl.model"></class-form>
+          <class-form class="ctrl.editableInEdit" old-class="ctrl.class" model="ctrl.model" open-property-id="ctrl.openPropertyId"></class-form>
         </selection-content>
       </selection-view>
     </div>
