--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -1,39 +1,38 @@
-<div ng-if="ctrl.isOpen">
-  <div class="row">
-    <div class="col-md-1 pull-right">
-      <button ng-if="editableController.isEditing()"
-              type="button"
-              class="btn btn-default pull-right"
-              ng-disabled="!ctrl.inUnstableState"
-              ng-click="editableController.removeProperty(ctrl.property)" uib-tooltip="{{'Delete property' | translate}}"><i class="fa fa-trash"></i></button>
-    </div>
-    <div class="col-md-6">
-      <editable data-title="Class property label" context="ctrl.model">
-        <input id="{{ctrl.property.internalId + 'label'}}" class="form-control" type="text" restrict-duplicates="ctrl.otherPropertyLabels" localized-input="label" context="ctrl.model" ng-model="ctrl.property.label" />
-      </editable>
+<div class="row">
+  <div class="col-md-1 pull-right">
+    <button ng-if="ctrl.isEditing()"
+            type="button"
+            class="btn btn-default pull-right"
+            ng-disabled="!ctrl.inUnstableState"
+            ng-click="ctrl.removeProperty(ctrl.property)" uib-tooltip="{{'Delete property' | translate}}"><i class="fa fa-trash"></i></button>
+  </div>
+  <div class="col-md-6">
+    <editable data-title="Class property label" context="ctrl.model">
+      <input id="{{ctrl.property.internalId + 'label'}}" class="form-control" type="text" restrict-duplicates="ctrl.otherPropertyLabels" localized-input="label" context="ctrl.model" ng-model="ctrl.property.label" />
+    </editable>
 
-      <editable ng-if="ctrl.isAttribute()" data-title="Range" context="ctrl.model">
-        <range-select id="{{ctrl.property.internalId + 'range'}}" range="ctrl.property.dataType"></range-select>
-      </editable>
+    <editable ng-if="ctrl.isAttribute()" data-title="Range" context="ctrl.model">
+      <range-select id="{{ctrl.property.internalId + 'range'}}" range="ctrl.property.dataType"></range-select>
+    </editable>
 
-      <editable ng-if="ctrl.isAssociation()" data-title="Value class" link="ctrl.linkToValueClass()" context="ctrl.model">
-        <uri-select id="{{ctrl.property.internalId + 'valueClass'}}" type="class" uri="ctrl.property.valueClass" mandatory="!ctrl.inUnstableState" duplicate="ctrl.isConflictingValueClass" model="ctrl.model"></uri-select>
-      </editable>
-    </div>
-
-    <div class="col-md-5">
-      <editable data-title="Description" context="ctrl.model">
-        <textarea id="{{ctrl.property.internalId + 'comment'}}" class="form-control" localized-input context="ctrl.model" ng-model="ctrl.property.comment"></textarea>
-      </editable>
-
-      <editable data-title="State" value-as-localization-key="true" context="ctrl.model">
-        <state-select id="{{ctrl.property.internalId + 'state'}}" state="ctrl.property.state" model="ctrl.model"></state-select>
-      </editable>
-    </div>
+    <editable ng-if="ctrl.isAssociation()" data-title="Value class" link="ctrl.linkToValueClass()" context="ctrl.model">
+      <uri-select id="{{ctrl.property.internalId + 'valueClass'}}" type="class" uri="ctrl.property.valueClass" mandatory="!ctrl.inUnstableState" duplicate="ctrl.isConflictingValueClass" model="ctrl.model"></uri-select>
+    </editable>
   </div>
 
-  <h4 translate
-      ng-show="ctrl.isEditing()
+  <div class="col-md-5">
+    <editable data-title="Description" context="ctrl.model">
+      <textarea id="{{ctrl.property.internalId + 'comment'}}" class="form-control" localized-input context="ctrl.model" ng-model="ctrl.property.comment"></textarea>
+    </editable>
+
+    <editable data-title="State" value-as-localization-key="true" context="ctrl.model">
+      <state-select id="{{ctrl.property.internalId + 'state'}}" state="ctrl.property.state" model="ctrl.model"></state-select>
+    </editable>
+  </div>
+</div>
+
+<h4 translate
+    ng-show="ctrl.isEditing()
            || ctrl.property.externalId
            || ctrl.property.example
            || ctrl.property.in.length > 0
@@ -46,105 +45,104 @@
            || ctrl.property.maxCount
     ">Optional metadata</h4>
 
-  <div class="row">
-    <div class="col-md-6">
+<div class="row">
+  <div class="col-md-6">
 
-      <editable data-title="Class property id" context="ctrl.model">
-        <input id="{{ctrl.property.internalId + 'id'}}" class="form-control" type="text" restrict-duplicates="ctrl.otherPropertyIdentifiers" string-input="identifier" ng-trim="false" ng-model="ctrl.property.externalId" />
-      </editable>
+    <editable data-title="Class property id" context="ctrl.model">
+      <input id="{{ctrl.property.internalId + 'id'}}" class="form-control" type="text" restrict-duplicates="ctrl.otherPropertyIdentifiers" string-input="identifier" ng-trim="false" ng-model="ctrl.property.externalId" />
+    </editable>
 
-      <editable-multiple-uri-select ng-if="ctrl.isAssociation()" id="classIn" type="class" ng-model="ctrl.property.classIn" model="ctrl.model" data-title="{{'Class type'}}"></editable-multiple-uri-select>
+    <editable-multiple-uri-select ng-if="ctrl.isAssociation()" id="classIn" type="class" ng-model="ctrl.property.classIn" model="ctrl.model" data-title="{{'Class type'}}"></editable-multiple-uri-select>
 
-    </div>
-
-    <div class="col-md-6">
-      <editable data-title="Editorial note" context="ctrl.model">
-        <textarea id="editorialNote" class="form-control" localized-input="free" context="ctrl.model" ng-model="ctrl.property.editorialNote"></textarea>
-      </editable>
-    </div>
   </div>
 
-  <div class="row">
-    <div class="col-md-12">
-      <editable-code-scheme-select model="ctrl.model" code-scheme="ctrl.property.codeScheme"></editable-code-scheme-select>
-    </div>
+  <div class="col-md-6">
+    <editable data-title="Editorial note" context="ctrl.model">
+      <textarea id="editorialNote" class="form-control" localized-input="free" context="ctrl.model" ng-model="ctrl.property.editorialNote"></textarea>
+    </editable>
   </div>
-
-  <div class="row">
-    <div class="col-md-6">
-
-      <editable data-title="Example" context="ctrl.model">
-        <code-value-input-autocomplete code-scheme="ctrl.property.codeScheme" context="ctrl.model">
-          <input id="{{ctrl.property.internalId + 'example attribute'}}" class="form-control" type="text" datatype-input="ctrl.property.inputType" code-scheme="ctrl.property.codeScheme" ng-model="ctrl.property.example" />
-        </code-value-input-autocomplete>
-      </editable>
-
-      <editable-multiple-data-type-input data-title="Allowed values" id="{{ctrl.property.internalId + 'allowedValues'}}" input-type="ctrl.property.inputType" ng-model="ctrl.property.in" code-scheme="ctrl.property.codeScheme" context="ctrl.model"></editable-multiple-data-type-input>
-
-      <editable data-title="Default value" context="ctrl.model">
-        <code-value-input-autocomplete code-scheme="ctrl.property.codeScheme" context="ctrl.model">
-          <input id="{{ctrl.property.internalId + 'default value'}}" class="form-control" type="text" datatype-input="ctrl.property.inputType" code-scheme="ctrl.property.codeScheme" ng-model="ctrl.property.defaultValue" />
-        </code-value-input-autocomplete>
-      </editable>
-
-      <editable data-title="Fixed value" context="ctrl.model">
-        <code-value-input-autocomplete code-scheme="ctrl.property.codeScheme" context="ctrl.model">
-          <input id="{{ctrl.property.internalId + 'hasValue'}}" class="form-control" type="text" datatype-input="ctrl.property.inputType" code-scheme="ctrl.property.codeScheme" ng-model="ctrl.property.hasValue" />
-        </code-value-input-autocomplete>
-      </editable>
-    </div>
-
-    <div class="col-md-6">
-
-      <editable ng-if="ctrl.isAttribute()" data-title="Pattern" context="ctrl.model">
-        <input id="{{ctrl.property.internalId + 'pattern'}}" class="form-control" type="text" ng-model="ctrl.property.pattern" />
-      </editable>
-
-      <div class="range-input">
-        <editable data-title="Min length" context="ctrl.model">
-          <input id="{{ctrl.property.internalId + 'minLength'}}" min-input max="ctrl.property.maxLength" class="form-control" type="number" ng-model="ctrl.property.minLength" />
-        </editable>
-
-        <editable data-title="Max length" context="ctrl.model">
-          <input id="{{ctrl.property.internalId + 'maxLength'}}" max-input min="ctrl.property.minLength" class="form-control" type="number" ng-model="ctrl.property.maxLength" />
-        </editable>
-      </div>
-
-      <div class="range-input">
-        <editable data-title="Min count" context="ctrl.model">
-          <input id="{{ctrl.property.internalId + 'minCount'}}" placeholder="0" min-input max="ctrl.property.maxCount" class="form-control" type="number" ng-model="ctrl.property.minCount" />
-        </editable>
-
-        <editable data-title="Max count" context="ctrl.model">
-          <input id="{{ctrl.property.internalId + 'maxCount'}}" placeholder="*" max-input min="ctrl.property.minCount" class="form-control" type="number" ng-model="ctrl.property.maxCount" />
-        </editable>
-      </div>
-    </div>
-  </div>
-
-  <h4 translate>Reusable predicate</h4>
-
-  <uib-accordion>
-    <uib-accordion-group is-open="predicateOpen">
-      <uib-accordion-heading>
-        <span accordion-chevron is-open="predicateOpen">{{ctrl.predicateName}}</span>
-      </uib-accordion-heading>
-      <div ng-if="ctrl.predicate">
-        <div class="row">
-          <div class="col-md-6">
-            <non-editable data-title="{{ctrl.predicate.normalizedType + ' label' | capitalize}}" value="ctrl.predicate.label" context="ctrl.model"></non-editable>
-            <non-editable data-title="{{ctrl.predicate.normalizedType + ' id' | capitalize}}" value="ctrl.predicate.id" context="ctrl.model"></non-editable>
-            <non-editable data-title="Range" value="ctrl.predicate.range" context="ctrl.model"></non-editable>
-          </div>
-          <div class="col-md-6">
-            <non-editable data-title="Description" value="ctrl.predicate.comment" context="ctrl.model"></non-editable>
-            <defined-by entity="ctrl.predicate" model="ctrl.model"></defined-by>
-            <non-editable data-title="Predicate type" value="ctrl.predicate.normalizedType" value-as-localization-key="true" context="ctrl.model"></non-editable>
-          </div>
-        </div>
-        <subject-view subject="ctrl.predicate.subject" context="ctrl.model"></subject-view>
-      </div>
-      <div ng-if="!ctrl.predicate" translate>Predicate information not found</div>
-    </uib-accordion-group>
-  </uib-accordion>
 </div>
+
+<div class="row">
+  <div class="col-md-12">
+    <editable-code-scheme-select model="ctrl.model" code-scheme="ctrl.property.codeScheme"></editable-code-scheme-select>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-6">
+
+    <editable data-title="Example" context="ctrl.model">
+      <code-value-input-autocomplete code-scheme="ctrl.property.codeScheme" context="ctrl.model">
+        <input id="{{ctrl.property.internalId + 'example attribute'}}" class="form-control" type="text" datatype-input="ctrl.property.inputType" code-scheme="ctrl.property.codeScheme" ng-model="ctrl.property.example" />
+      </code-value-input-autocomplete>
+    </editable>
+
+    <editable-multiple-data-type-input data-title="Allowed values" id="{{ctrl.property.internalId + 'allowedValues'}}" input-type="ctrl.property.inputType" ng-model="ctrl.property.in" code-scheme="ctrl.property.codeScheme" context="ctrl.model"></editable-multiple-data-type-input>
+
+    <editable data-title="Default value" context="ctrl.model">
+      <code-value-input-autocomplete code-scheme="ctrl.property.codeScheme" context="ctrl.model">
+        <input id="{{ctrl.property.internalId + 'default value'}}" class="form-control" type="text" datatype-input="ctrl.property.inputType" code-scheme="ctrl.property.codeScheme" ng-model="ctrl.property.defaultValue" />
+      </code-value-input-autocomplete>
+    </editable>
+
+    <editable data-title="Fixed value" context="ctrl.model">
+      <code-value-input-autocomplete code-scheme="ctrl.property.codeScheme" context="ctrl.model">
+        <input id="{{ctrl.property.internalId + 'hasValue'}}" class="form-control" type="text" datatype-input="ctrl.property.inputType" code-scheme="ctrl.property.codeScheme" ng-model="ctrl.property.hasValue" />
+      </code-value-input-autocomplete>
+    </editable>
+  </div>
+
+  <div class="col-md-6">
+
+    <editable ng-if="ctrl.isAttribute()" data-title="Pattern" context="ctrl.model">
+      <input id="{{ctrl.property.internalId + 'pattern'}}" class="form-control" type="text" ng-model="ctrl.property.pattern" />
+    </editable>
+
+    <div class="range-input">
+      <editable data-title="Min length" context="ctrl.model">
+        <input id="{{ctrl.property.internalId + 'minLength'}}" min-input max="ctrl.property.maxLength" class="form-control" type="number" ng-model="ctrl.property.minLength" />
+      </editable>
+
+      <editable data-title="Max length" context="ctrl.model">
+        <input id="{{ctrl.property.internalId + 'maxLength'}}" max-input min="ctrl.property.minLength" class="form-control" type="number" ng-model="ctrl.property.maxLength" />
+      </editable>
+    </div>
+
+    <div class="range-input">
+      <editable data-title="Min count" context="ctrl.model">
+        <input id="{{ctrl.property.internalId + 'minCount'}}" placeholder="0" min-input max="ctrl.property.maxCount" class="form-control" type="number" ng-model="ctrl.property.minCount" />
+      </editable>
+
+      <editable data-title="Max count" context="ctrl.model">
+        <input id="{{ctrl.property.internalId + 'maxCount'}}" placeholder="*" max-input min="ctrl.property.minCount" class="form-control" type="number" ng-model="ctrl.property.maxCount" />
+      </editable>
+    </div>
+  </div>
+</div>
+
+<h4 translate>Reusable predicate</h4>
+
+<uib-accordion>
+  <uib-accordion-group is-open="predicateOpen">
+    <uib-accordion-heading>
+      <span accordion-chevron is-open="predicateOpen">{{ctrl.predicateName}}</span>
+    </uib-accordion-heading>
+    <div ng-if="ctrl.predicate">
+      <div class="row">
+        <div class="col-md-6">
+          <non-editable data-title="{{ctrl.predicate.normalizedType + ' label' | capitalize}}" value="ctrl.predicate.label" context="ctrl.model"></non-editable>
+          <non-editable data-title="{{ctrl.predicate.normalizedType + ' id' | capitalize}}" value="ctrl.predicate.id" context="ctrl.model"></non-editable>
+          <non-editable data-title="Range" value="ctrl.predicate.range" context="ctrl.model"></non-editable>
+        </div>
+        <div class="col-md-6">
+          <non-editable data-title="Description" value="ctrl.predicate.comment" context="ctrl.model"></non-editable>
+          <defined-by entity="ctrl.predicate" model="ctrl.model"></defined-by>
+          <non-editable data-title="Predicate type" value="ctrl.predicate.normalizedType" value-as-localization-key="true" context="ctrl.model"></non-editable>
+        </div>
+      </div>
+      <subject-view subject="ctrl.predicate.subject" context="ctrl.model"></subject-view>
+    </div>
+    <div ng-if="!ctrl.predicate" translate>Predicate information not found</div>
+  </uib-accordion-group>
+</uib-accordion>
