--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -3,7 +3,7 @@
     <button ng-if="ctrl.isEditing()"
             type="button"
             class="btn btn-default pull-right"
-            ng-disabled="!ctrl.inUnstableState"
+            ng-disabled="!ctrl.property.inUnstableState"
             ng-click="ctrl.removeProperty(ctrl.property)" uib-tooltip="{{'Delete property' | translate}}"><i class="fa fa-trash"></i></button>
   </div>
   <div class="col-md-6">
