Make range input work better with variable width

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -521,14 +521,19 @@ $input-select: 80px;
 }
 
 .range-input {
+
+  @include clearfix;
+
   editable {
     float: left;
     width: calc(50% + 7.5px);
+    max-width: calc(#{$input-max-width} / 2 + 7.5px);
     padding-right: 15px;
   }
 
   editable:last-child {
     width: calc(50% - 7.5px);
+    max-width: calc(#{$input-max-width} / 2 - 7.5px);
     padding-right: 0;
   }
 }
