New icon for visualization

--- a/src/components/editor/visualizationView.html
+++ b/src/components/editor/visualizationView.html
@@ -1,7 +1,7 @@
 <div class="component">
   <div class="component-header">
     <h3>
-      <span class="glyphicon glyphicon-th"></span>
+      <i class="fa fa-share-alt-square" aria-hidden="true"></i>
       <span translate>Visualization</span>
       <span class="glyphicon glyphicon-resize-full pull-right collapsable" ng-hide="!ctrl.selection || ctrl.show === 2" ng-click="ctrl.enlargeVisualization()"></span>
       <span class="glyphicon glyphicon-resize-small pull-right collapsable" ng-hide="!ctrl.selection || ctrl.show === 1" ng-click="ctrl.shrinkVisualization()"></span>
