Remove redundant references scope parameter

--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -42,7 +42,7 @@
 <div class="row">
 
   <div class="col-md-12">
-    <editable-subject-select references="ctrl.model.references" type="class" subject="ctrl.class.subject" model="ctrl.model" disable="!ctrl.class.inUnstableState"></editable-subject-select>
+    <editable-subject-select type="class" subject="ctrl.class.subject" model="ctrl.model" disable="!ctrl.class.inUnstableState"></editable-subject-select>
   </div>
 </div>
 
