--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -48,7 +48,7 @@
 
   <div class="col-md-12">
 
-    <editable-subject-select references="ctrl.model.references" type="{{ctrl.predicate.normalizedType}}" subject="ctrl.predicate.subject" model="ctrl.model" disable="!ctrl.predicate.inUnstableState"></editable-subject-select>
+    <editable-subject-select type="{{ctrl.predicate.normalizedType}}" subject="ctrl.predicate.subject" model="ctrl.model" disable="!ctrl.predicate.inUnstableState"></editable-subject-select>
 
   </div>
 
